# gym_sawyer

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: learn_to_touch_cube.yaml
launch/: learn_to_touch_cube.launch  learn_to_touch_cube_no_gui.launch  setup_block_systems_env.launch  setup_learning_env.launch  setup_learning_env_2.launch  spawn_block.launch  spawn_block_table.launch  spawn_table.launch  spawn_table_2.launch
scripts/: block_odom_publisher.py  block_tf_publisher.py
src/gym_sawyer/: data_collector.py  debug.py  demo.py  demo_ik_0.py  init_robotic_arm.py  openai_ros_common.py  set_gazebo_model.py  sim_to_real.py  sim_to_real_pick_and_place.py  task_envs_list.py  training.py  warm_up.py
src/gym_sawyer/task_envs/: learn_to_reach_cube_ik_0.py  learn_to_reach_cube_ik_0_bin.py  learn_to_touch_cube.py  robot_gazebo_env.py  sawyer_env.py  sawyer_env_discrete.py  sawyer_env_ik.py
